Fix background cover not display on small screens. Fix Home background image not taking full height on small landscape screens. .

--- a/src/components/album/album-styles.scss
+++ b/src/components/album/album-styles.scss
@@ -5,7 +5,7 @@
 	justify-content: space-between;
 
 	div {
-		//margin-bottom: 2%;
+		margin-bottom: 2%;
 	}
 
 	p {
@@ -32,7 +32,7 @@
 @media only screen and (max-width : 926px) {
 	.image-flex-wrap {
 		margin: 0;
-
+	
 		p {
 			font-size: 1em;
 			padding: 5%;
